--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="IMAGES/LOGO.jpg" class="logo">
+                <img src="LOGO.jpg" class="logo">
                 <ul>
                     <li><a href="#">HOME</a></li>
                     <li><a href="#">ABOUT</a></li>
@@ -29,7 +29,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="IMAGES/su.jpg" class="ab">
+                    <img src="su.jpg" class="ab">
                 </div>
                 <div class="about-col-2">
                     <h1 class="subtitle">About Me</h1>
